--- a/src/app/student/all-courses/all-course.css
+++ b/src/app/student/all-courses/all-course.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     min-height: 110vh;
+    margin-top: 150px;
     background: linear-gradient(rgb(255, 255, 255),rgba(255, 254, 255, 0.696),rgb(219, 204, 215),rgb(252, 252, 252));
 }
 .all-crs-cnt1{
