--- a/src/app/student/single-course/[id]/singleCourse.css
+++ b/src/app/student/single-course/[id]/singleCourse.css
@@ -1,4 +1,6 @@
-.single-course-sct1-cnt1{
+.single-course{
+    margin-top: 150px;
+}.single-course-sct1-cnt1{
 
     margin:10vh auto;
     max-width: 1250px;
