--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,8 +1,8 @@
 .sidebar {
   width: 380px;
   height: 100vh;
-  background: linear-gradient(rgba(255, 255, 255, 0.09),rgb(199, 195, 195),rgba(255, 255, 255, 0.09));
-  background-color: #e3e3e3;
+  background-color: rgba(213, 139, 194, 0.414);
+  backdrop-filter: blur(8px);
   border-left: solid 2px rgb(47, 10, 31);
   color: #000000;
   /* padding: 20px 20px; */
@@ -40,7 +40,17 @@
   margin: 0;
   padding: 0;
 }
-
+.sidebar button{
+  background-color: #c4757e99;
+  border: 1px solid;
+  font-size: 16;
+  font-weight: 600;
+  letter-spacing: 2;
+  box-shadow: 0 0 20px #b01d2c99 ;
+  margin: 2;
+  text-shadow: #000000 0 0 20;
+  color: white;
+}
 /* --------------------*Section 1 ----------------------------------------------*/
 .sb-sct1 {
   margin: 20px 0 20px;
