--- a/src/app/instructor/all-course/allCourse.css
+++ b/src/app/instructor/all-course/allCourse.css
@@ -1,6 +1,6 @@
-/* .allCourse-sct1{
-    background-color: yellow;
-} */
+.allCourse-sct1{
+margin: 150px 0 0 0;
+}
 .allCourse-sct1-ctn1{
     /* background-color: aqua; */
     max-width: 1250px;
