--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -20,7 +20,7 @@
   transition: transform 1.5s ease-in-out,box-shadow 1.5s ease-in-out;
 }
 .sidebar.open {
-  box-shadow: -10px 0 30px rgb(64, 63, 64);
+  box-shadow: -10px 0 30px rgb(199, 165, 199);
   transform: translateX(0);
 }
 .sb-sct1{
@@ -106,6 +106,16 @@
   margin: 20px 0;
   
 }
+.sb-sct2 select{
+  margin: 20 0;
+  background-color: #98909029 !important;
+  border: 1px solid;
+  font-size: 16;
+  font-weight: 600;
+  letter-spacing: 2;
+  box-shadow: 0 0 20px #b01d2c99 ;
+  color: white;
+}
 
 
 
@@ -123,13 +133,23 @@
 }
 
 
+.sidebar-all-course{
+  display: none;
+}
+
+@media (max-width: 617px)  {
+  
+.sidebar-all-course{
+  display: flex;
+}
+}
 
 
 @media (max-width: 616px) {
   .sidebar {
     max-width: none;
     width: 60%;
-    height: 110vh;
+    height: 100vh;
     /* min-height: 100vh; */
   }
 }
