--- a/src/app/admin/adminHome.css
+++ b/src/app/admin/adminHome.css
@@ -18,13 +18,15 @@
   height: 100vh;
   width: 220px;
 }
-.sidebar2{
+
+.sidebar2 {
   width: 220px;
   padding: 20px;
   background: #91485b;
- position: fixed; 
- height: 100vh;
+  position: fixed;
+  height: 100vh;
 }
+
 .logo {
   font-size: 20px;
   font-weight: bold;
@@ -109,21 +111,22 @@
 /* Sections */
 .sections {
   display: grid;
-  /* grid-template-columns: repeat(3, 1fr); */
   gap: 20px;
 }
 
 .section1 {
-  background: white;
+  background: #ffffff;
   padding: 20px;
   border-radius: 10px;
-  background-color: #ffffff;
-  box-shadow: 0 0  2 rgb(175, 162, 162);
+  box-shadow: 0 0 2px rgb(175, 162, 162);
 }
 
 .section-title {
   font-size: 18px;
   margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .section-box {
@@ -131,42 +134,41 @@
   width: 100%;
 }
 
-.section-title{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+/* Table */
+.admin-table {
+  width: 100%;
+  border-collapse: collapse;
+  text-align: left;
 }
-.lists{
-  display: grid;
-  grid-template-columns: repeat(3,1fr);
+
+.admin-table th,
+.admin-table td {
+  padding: 10px 15px;
+  border-bottom: 1px solid #ccc;
 }
-.lists div{
-  display: flex;
-  gap: 20px;
-  margin-bottom: 20px;
-  align-items: center;
-}
-.user-avatar{
+
+.user-avatar {
   border-radius: 50%;
 }
 
-
-/* ----- button and function of user   */
+/* Status dot */
 .status-dot {
+  display: inline-block;
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  display: inline-block;
   margin-right: 8px;
 }
 
 .status-dot.active {
-  background-color: #2ecc71; /* green */
+  background-color: #2ecc71;
 }
 
 .status-dot.inactive {
-  background-color: #e74c3c; /* red */
+  background-color: #e74c3c;
 }
+
+/* Buttons */
 .btn {
   text-transform: capitalize !important;
   font-size: 13px !important;
@@ -189,4 +191,40 @@
 
 .btn-inactive:hover {
   background-color: #c0392b !important;
+}
+
+
+/* ----------------------dot-------- */
+.btn-approved {
+  background-color: #4caf50 !important; /* Green */
+  color: white;
+}
+
+.btn-rejected {
+  background-color: #f44336 !important; /* Red */
+  color: white;
+}
+
+.btn-pending {
+  background-color: #ff9800 !important; /* Orange */
+  color: white;
+}
+
+.status-dot.pending-dot {
+  background-color: #ff9800; /* Orange */
+}
+
+
+@media (max-width:910px) {
+  .sidebar1{
+    height: 100%;
+  }
+  .sidebar2 {
+  width: 220px;
+  padding: 20px;
+  background: #91485b;
+  position: relative;
+  height: 100%;
+}
+
 }
