--- a/src/app/admin/single-course/[id]/singleCourse.css
+++ b/src/app/admin/single-course/[id]/singleCourse.css
@@ -1,3 +1,7 @@
+.admin-single-course .single-course-sct1-cnt1{
+    background-color: rgb(204, 204, 204);
+    border-radius: 20px;
+}
 .single-course{
     margin-top: 150px;
 }
