--- a/src/app/instructor/all-course/allCourse.css
+++ b/src/app/instructor/all-course/allCourse.css
@@ -1,19 +1,22 @@
-.allCourse-sct1{
-margin: 150px 0 0 0;
+.allCourse-sct1 {
+  margin: 150px 0 0 0;
 }
-.allCourse-sct1-ctn1{
-    /* background-color: aqua; */
-    max-width: 1250px;
-    margin: auto;
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    padding: 20px;
-    gap: 20px;
+.allCourse-sct1-ctn1 {
+  /* background-color: aqua; */
+  max-width: 1250px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 20px;
+  gap: 20px;
 }
-              
-.allCourse-sct1-ctn1 .card{
-    margin: auto;
-    width: 100%;
+
+.allCourse-sct1-ctn1 .card {
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  min-height: 600px;
+  overflow: hidden;
 }
 
 .pages0 {
@@ -27,7 +30,7 @@ margin: 150px 0 0 0;
 }
 .pagination0 {
   max-width: fit-content;
-  margin:  auto;
+  margin: auto;
   padding: 50px;
 }
 .pagination0 span {
@@ -41,11 +44,7 @@ margin: 150px 0 0 0;
   transition: 0.3s;
 }
 
-
-
-
 /* ================responsive=============================================== */
-
 
 @media (max-width: 1253px) {
 }
@@ -54,26 +53,22 @@ margin: 150px 0 0 0;
 }
 
 @media (max-width: 1113px) {
-  .allCourse-sct1-ctn1{
-    grid-template-columns: repeat(2,1fr);
+  .allCourse-sct1-ctn1 {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
-
 
 @media (max-width: 989px) {
 }
 
 @media (max-width: 777px) {
-  
 }
 
 @media (max-width: 756px) {
-
- .allCourse-sct1-ctn1{
-    grid-template-columns: repeat(1,1fr);
+  .allCourse-sct1-ctn1 {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
 @media (max-width: 670px) {
-
 }
