--- a/src/app/student/all-courses/all-course.css
+++ b/src/app/student/all-courses/all-course.css
@@ -1,29 +1,34 @@
-.all-course{
-    width: 100%;
-    height: 100%;
-    min-height: 110vh;
-    margin-top: 150px;
-    background: linear-gradient(rgb(255, 255, 255),rgba(255, 254, 255, 0.696),rgb(219, 204, 215),rgb(252, 252, 252));
+.all-course {
+  width: 100%;
+  height: 100%;
+  min-height: 110vh;
+  margin-top: 150px;
+  background: linear-gradient(
+    rgb(255, 255, 255),
+    rgba(255, 254, 255, 0.696),
+    rgb(219, 204, 215),
+    rgb(252, 252, 252)
+  );
 }
-.all-crs-cnt1{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    margin:20 auto;
-    max-width: 1250px;
-    gap: 20px;
-    padding: 20;
-
+.all-crs-cnt1 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin: 20 auto;
+  max-width: 1250px;
+  gap: 20px;
+  padding: 20;
 }
-.all-crs-cnt1 .card{
+.all-crs-cnt1 .card {
   /* background-color: rgb(254, 230, 233); */
-  box-shadow:  0 0 20 rgba(43, 40, 40, 0.747);
+  box-shadow: 0 0 20 rgba(43, 40, 40, 0.747);
 }
-.all-crs-cnt1 .card{
-    width: 100%;
-    margin: auto;
-    max-height:fit-content ;
+.all-crs-cnt1 .card {
+  width: 100%;
+  margin: auto;
+  max-height: fit-content;
+  height: 100%;
+  /* min-height: 600px; */
 }
-
 
 .pages0 {
   font-size: 16px !important;
@@ -36,7 +41,7 @@
 }
 .pagination0 {
   max-width: fit-content;
-  margin:  auto;
+  margin: auto;
   padding: 50px;
 }
 .pagination0 span {
@@ -50,40 +55,28 @@
   transition: 0.3s;
 }
 
-
-
-
 /* ----------------------responsive----------------------------- */
 
 @media (max-width: 1401px) {
-    
 }
 
 @media (max-width: 1201px) {
-    
 }
 
 @media (max-width: 1253px) {
-
-
 }
 
-@media (max-width: 989px){
-.all-crs-cnt1{
-  grid-template-columns: repeat(2,1fr);
+@media (max-width: 989px) {
+  .all-crs-cnt1 {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
-}
-
-@media (max-width: 777px)  {
-
-
-
+@media (max-width: 777px) {
 }
 
 @media (max-width: 606px) {
-
-  .all-crs-cnt1{
-  grid-template-columns: repeat(1,1fr);
-}
+  .all-crs-cnt1 {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
