--- a/src/app/style/home.css
+++ b/src/app/style/home.css
@@ -172,6 +172,9 @@
 .card2 .card {
   margin: auto;
   width: 100%;
+  height: 100%;
+  
+  min-height: 600px;
   max-height: fit-content;
 }
 /* ========================section3================================================== */
