--- a/src/app/style/home.css
+++ b/src/app/style/home.css
@@ -141,14 +141,7 @@
     rgba(231, 231, 231, 0)
   );
 }
-.sct2-bg {
-  /* background: linear-gradient(
-    rgba(255, 255, 255, 0),
-    rgba(177, 238, 171, 0.333),
-    rgba(203, 180, 217, 0.634),
-    rgba(231, 231, 231, 0)
-  ); */
-}
+
 .sct2-cnt2 h1 {
   text-align: center;
   font-size: 70px;
@@ -174,8 +167,22 @@
   width: 100%;
   height: 100%;
   
-  min-height: 600px;
+  min-height: 500px;
   max-height: fit-content;
+}
+.card2 .card .title{
+    display: -webkit-box;     
+  -webkit-line-clamp: 1;     
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.card2 .card .description{
+      display: -webkit-box;     
+  -webkit-line-clamp: 2;     
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 /* ========================section3================================================== */
 
