--- a/src/app/instructor/instructorHome.css
+++ b/src/app/instructor/instructorHome.css
@@ -16,7 +16,7 @@
   width: 100%;
   max-height: fit-content;
   height: 100%;
-  min-height: 600px;
+  /* min-height: 600px; */
 }
 
 .instructor-home-h1 {
