--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -88,7 +88,15 @@
 }
 
 
-
+.go-instructor-home{
+  max-height: 40;
+  justify-content: center !important;
+  padding: 20px !important;
+  background:none !important;
+  color: #000 !important;
+  align-items: center;
+  margin: auto !important;
+}
 /* .mbl{
 } */
 /* --------------------------responsive--------------------- */
